[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signward-idserver-client"
version = "1.0.0"
description = "Python client SDK for Signward Identity Server — OIDC authentication for FastAPI and other Python apps."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Signward" }
]
keywords = ["authentication", "identity", "oidc", "oauth2", "jwt", "signward", "fastapi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    "pydantic>=2.5",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100"]
flask = ["flask>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://signward.com"
Documentation = "https://developer.signward.com/sdks/python"
Repository = "https://github.com/signward/idserver-sdk"
Issues = "https://github.com/signward/idserver-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/idserver"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
